Pass multiple callbacks - all of them are called

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script>mocha.setup('qunit');</script>
     <script src="src/operation.js"></script>
     <script src="src/callback.examples.js"></script>
+    <script src="multiDone.js"></script>
     <script>
       mocha.run();
     </script>
